the_project/base/manifests/broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: broadcaster-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
      - name: broadcaster
        image: usb9/broadcaster-app:4.6.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
